# src/main/resources/oas/transferregistrationservice.yaml
@@ -219,7 +219,7 @@ paths:
           content: { }
       deprecated: false
       security:
-        - bearerAuth: [ ]
+        - basicAuth: [ ]
   /transfer-registration/v1/vehicle:
     post:
       tags:
@@ -251,7 +251,7 @@ paths:
           content: { }
       deprecated: false
       security:
-        - bearerAuth: [ ]
+        - basicAuth: [ ]
 components:
   schemas:
     Error:
@@ -294,23 +294,23 @@ components:
       properties:
         emailId:
           type: string
-          pattern: ^[\\w!#$%&'*+/=?`{|}~^-]+(?:\\.[\\w!#$%&'*+/=?`{|}~^-]+)*@(?:[a-zA-Z0-9-]+\\.)+[a-zA-Z]{2,6}$
+          pattern: "^[\\w!#$%&'*+/=?`{|}~^-]+(?:\\.[\\w!#$%&'*+/=?`{|}~^-]+)*@(?:[a-zA-Z0-9-]+\\.)+[a-zA-Z]{2,6}$"
           example: "test@gmail.com"
           description: Email address of the account holder.This will be used to login into the account created
         mobilenumber:
           type: string
-          pattern: ^04[0-9]{8}$
+          pattern: "^04[0-9]{8}$"
           example: "0462098765"
           description: Australian Mobile Number
         password:
           type: string
           format: password
-        vehiclesRegistered:
-          readOnly: true
-          type: array
-          minItems: 1
-          items:
-            $ref: '#/components/schemas/Vehicle'
+#        vehiclesRegistered:
+#          readOnly: true
+#          type: array
+#          minItems: 1
+#          items:
+#            $ref: '#/components/schemas/Vehicle'
     Vehicle:
       title: Vehicle
       type: object
@@ -323,7 +323,7 @@ components:
       properties:
         registrationNumber:
           type: string
-          pattern: ([0-9]+[a-zA-Z][0-9a-zA-Z]*)|([a-zA-Z]+[0-9][0-9a-zA-Z]*)
+          pattern: "([0-9]+[a-zA-Z][0-9a-zA-Z]*)|([a-zA-Z]+[0-9][0-9a-zA-Z]*)"
           example: "SDF78A"
         model:
           type: string
@@ -333,16 +333,16 @@ components:
           example: "Ford"
         year:
           type: integer
-          pattern: ^\d{4}$
+          pattern: '^\d{4}$'
           example: "2010"
         vin:
           type: string
-          pattern: ([0-9]+[a-zA-Z][0-9a-zA-Z]*)|([a-zA-Z]+[0-9][0-9a-zA-Z]*)
+          pattern: "([0-9]+[a-zA-Z][0-9a-zA-Z]*)|([a-zA-Z]+[0-9][0-9a-zA-Z]*)"
           minLength: 11
           maxLength: 17
-        registeredPerson:
-          $ref: '#/components/schemas/Person'
-          readOnly: true
+#        registeredPerson:
+#          $ref: '#/components/schemas/Person'
+#          readOnly: true
     SearchPersonRequest:
       title: SearchPersonRequest
       type: object
@@ -351,12 +351,12 @@ components:
       properties:
         emailId:
           type: string
-          pattern: ^[\\w!#$%&'*+/=?`{|}~^-]+(?:\\.[\\w!#$%&'*+/=?`{|}~^-]+)*@(?:[a-zA-Z0-9-]+\\.)+[a-zA-Z]{2,6}$
+          pattern: "^[\\w!#$%&'*+/=?`{|}~^-]+(?:\\.[\\w!#$%&'*+/=?`{|}~^-]+)*@(?:[a-zA-Z0-9-]+\\.)+[a-zA-Z]{2,6}$"
           example: "test@gmail.com"
           description: Email address of the account holder.This will be used to login into the account created
         mobilenumber:
           type: string
-          pattern: ^04[0-9]{8}$
+          pattern: "^04[0-9]{8}$"
           example: "0462098765"
           description: Australian Mobile Number
   examples:
